Fix parallax layers visibility: change objectFit to contain and adjust layer sizes

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -60,7 +60,7 @@ body {
   position: absolute;
   bottom: 0;
   left: 0;
-  width: 300%;
+  width: 400%;
   height: 100%;
   will-change: transform;
   z-index: 1;
@@ -70,7 +70,7 @@ body {
   position: absolute;
   bottom: 0;
   left: 0;
-  width: 250%;
+  width: 300%;
   height: 100%;
   will-change: transform;
   z-index: 2;
